--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -21,6 +21,7 @@
     "eslint-config-prettier": "^8.5.0",
     "express": "^4.18.1",
     "express-http-proxy": "^2.0.0",
+    "helmet": "^7.1.0",
     "pg": "^8.8.0",
     "prettier": "^2.7.1",
     "reflect-metadata": "^0.2.2",
